welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: not found: value YELLOW
	marque(d);avance();marque(YELLOW);avance();marque(d);recule();droite();avance();marque(c);recule(2);marque(d);
                                  ^FlowerPot:3: error: not found: value c
	marque(d);avance();marque(YELLOW);avance();marque(d);recule();droite();avance();marque(c);recule(2);marque(d);
                                                                                               ^